--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
   - PGPORT=5432
   - NODE_ENV=test
 before_script:
-  - psql -c 'create database way_farer_test;' -U postgres
+  - psql -c 'create database barefoot;' -U postgres
 script:
   - npm run test
 notifications:
