--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "coverage": "nyc report --reporter=text --reporter=html",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint \"**/*.js\" --ignore-pattern node_modules/ --fix",
-    "build": "babel ./src -d dist",
+    "clean": "rm -rf ./build && mkdir build",
+    "build": "npm run clean && babel ./src -d dist",
     "start": "node dist/index.js",
     "start:dev": "nodemon --exec babel-node -- src/index.js",
     "migrate:dev": "sequelize db:migrate",
@@ -58,6 +59,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
